--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
-python-binance==1.0.19
-python-telegram-bot==20.3
-pandas==2.0.3
-numpy==1.24.3
-ta-lib==0.4.24
+Flask==2.3.3
 requests==2.31.0
+sqlite3
+python-telegram-bot==20.6
+instagrapi==2.0.0
+tiktok-api==1.0.7
+google-api-python-client==2.108.0
+tweepy==4.14.0
+schedule==1.2.0
+python-dotenv==1.0.0
+Werkzeug==2.3.7
+gunicorn==21.2.0
